# magic-bg-remover

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
app/: main.py  requirements.txt  run_app.py  run_app_new.py  run_app_port3000.py  simple_app.py
app/static/css/: style.css
app/templates/: index.html
